<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editVM"
            type="com.mvk.pixman.ui.addimage.ImageViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.editimage.EditImageActivity">

            <ImageView
                android:id="@+id/editImageMainIV"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:contentDescription="@string/edit_image_cont_desc"
                tools:src="@drawable/hubble"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/editImageFlipHorizontalBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_flip_horizontal"
                android:drawablePadding="10dp"
                android:onClick="@{editVM.onFlipHorizontalClick}"
                android:text="@string/edit_image_flip_horizontally"
                app:layout_constraintEnd_toStartOf="@+id/editImageFlipVerticalBT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editImageMainIV" />

            <Button
                android:id="@+id/editImageFlipVerticalBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_flip_vertical"
                android:drawablePadding="10dp"
                android:onClick="@{editVM.onFlipVerticalClick}"
                android:text="@string/edit_image_flip_vertically"
                app:layout_constraintEnd_toStartOf="@+id/editImageOpacityBT"
                app:layout_constraintStart_toEndOf="@+id/editImageFlipHorizontalBT"
                app:layout_constraintTop_toBottomOf="@+id/editImageMainIV" />

            <Button
                android:id="@+id/editImageOpacityBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_opacity"
                android:drawablePadding="10dp"
                android:onClick="@{editVM.onSetOpacityClick}"
                android:text="@string/edit_image_set_opacity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editImageFlipVerticalBT"
                app:layout_constraintTop_toBottomOf="@+id/editImageMainIV" />

            <Button
                android:id="@+id/editImageAddTextBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_add_text"
                android:drawablePadding="10dp"
                android:onClick="@{editVM.onAddTextClick}"
                android:text="@string/edit_image_add_text"
                app:layout_constraintEnd_toStartOf="@+id/editImageSaveBT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editImageFlipHorizontalBT" />

            <Button
                android:id="@+id/editImageSaveBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_save"
                android:drawablePadding="10dp"
                android:onClick="@{editVM.onSaveImageClick}"
                android:text="@string/edit_image_save_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editImageAddTextBT"
                app:layout_constraintTop_toBottomOf="@+id/editImageFlipHorizontalBT" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>